<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fotoable.piano.game.FGLView
        android:id="@+id/fglview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/guide_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/guide_note0"
            android:textColor="@color/white"
            android:gravity="center"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/text_size_20" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pause_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_pause_bg"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/play_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/btn_play"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_play" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_play"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/play"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/play_layout"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/paused"
            android:textColor="@color/white"
            android:textSize="24dp" />

        <RelativeLayout
            android:id="@+id/start_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:layout_toLeftOf="@id/play_layout">

            <ImageView
                android:id="@+id/btn_start"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_restart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_start"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/start"
                android:textColor="@color/white_50"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/quit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:layout_toRightOf="@id/play_layout">

            <ImageView
                android:id="@+id/btn_quit"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_quit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_quit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/quit"
                android:textColor="@color/white_50"
                android:textSize="18dp" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>